deps/crates/vendor/rustversion/tests/ui/bad-version.stderr
error: expected rustc release number, like 1.31
 --> tests/ui/bad-version.rs:1:23
  |
1 | #[rustversion::stable(nightly)]
  |                       ^^^^^^^

error: expected rustc release number, like 1.31
 --> tests/ui/bad-version.rs:4:27
  |
4 | #[rustversion::any(stable(nightly))]
  |                           ^^^^^^^
