deps/crates/vendor/rustversion/tests/ui/bad-version.rs
#[rustversion::stable(nightly)]
struct S;

#[rustversion::any(stable(nightly))]
struct S;

fn main() {}
